--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2543,7 +2543,7 @@ wizard.choose_disk_location.directory_non_existent=WARNUNG\: Das Verzeichnis exi
 #orig#wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.directory_size=Verzeichnis Gr\u00f6\u00dfe {0}
 #orig#wizard.choose_disk_location.local_base.text=It is not possible to move a folder to the base directory.
-wizard.choose_disk_location.local_base.text=Verzeichnis darf nicht der Haupt-Speicherort aller Folder sein
+wizard.choose_disk_location.local_base.text=Verzeichnis darf nicht das Haupt-Verzeichnis von {APPNAME} sein.
 #orig#wizard.choose_disk_location.local_base.title=Base directory
 wizard.choose_disk_location.local_base.title=Speicherort
 #orig#wizard.choose_disk_location.maual_sync=Manual sync
@@ -2607,7 +2607,7 @@ wizard.folder_invitation.intro=Einladung von {0} f\u00fcr Folder {1}
 #orig#wizard.folder_invitation.title=Folder Invitation
 wizard.folder_invitation.title=Folder Einladung
 #orig#wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
-wizard.folder_online_storage.backup_success_message=Folder {0} wird nun online gesichert.\n \nDas erste Backup k\u00f6nnte einige Zeit\nin Anspruch nehmen bei gr\u00f6\u00dferen Datenmengen.
+wizard.folder_online_storage.backup_success_message=Folder {0} wird nun online gesichert.\n \nDas erste Backup k\u00f6nnte, bei gr\u00f6\u00dferen Datenmengen,\neinige Zeit in Anspruch nehmen.
 #orig#wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 wizard.folder_online_storage.backup_success_title=Cloud Speicher Setup erfolgreich
 #orig#wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
