--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1776,7 +1776,7 @@ preferences.dialog.show_advanced=Zeige erweiterte Einstellungen
 #orig#preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_chat_notifications=Popup f\u00fcr neue Chat Nachrichten anzeigen
 #orig#preferences.dialog.show_pf_link=Display {APPNAME} folders in Links
-preferences.dialog.show_pf_link=Folder unter Links anzeigen
+preferences.dialog.show_pf_link=Shortcut zu {APPNAME} Daten
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=Popups f\u00fcr Systemmeldungen anzeigen
 #orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
