--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2225,6 +2225,7 @@ status_bar.sleep.tips=Suche nach \u00c4nderungen deaktivieren
 tray_icon_manager.status_change.connected={APPNAME} ist verbunden
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
 tray_icon_manager.status_change.disabled={APPNAME} ist abgeschaltet
+tray_icon_manager.status_change.connecting={APPNAME} versucht zu verbinden
 #orig#status_bar.status_change.title=Connection Status
 tray_icon_manager.status_change.title=Verbindungsstatus
 
