--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -155,7 +155,7 @@ action_clear_link_directory.description=Löst die Verknüfung
 action_clear_link_directory.key=R
 action_clear_link_directory.name=Reset
 
-#orig#action_clear_problem.description=Clear problem(s) from list
+#orig#action_clear_problem.description=Clear problems from list
 action_clear_problem.description=Entfernt Probleme von der Liste
 #orig#action_clear_problem.key=C
 action_clear_problem.key=A
@@ -486,7 +486,7 @@ action_remove_invitee.key=E
 #orig#action_remove_invitee.name=Remove
 action_remove_invitee.name=Entfernen
 
-#orig#action_resolve_problem.description=Resolve problem(s)
+#orig#action_resolve_problem.description=Resolve problems
 action_resolve_problem.description=Problem l\u00f6sen
 #orig#action_resolve_problem.key=R
 action_resolve_problem.key=L
@@ -652,9 +652,9 @@ chat_panel.member_left_folder_at_time={0} hat Folder {1} verlassen um {2}
 
 #orig#check_status.in_sync_all=All Folders are in sync
 check_status.in_sync_all=Alle Folder sind synchronisiert
-#orig#check_status.powerfolders={0} in {1} folder(s)
+#orig#check_status.powerfolders={0} in {1} folders
 check_status.powerfolders={0} von {1} Folder
-#orig#check_status.syncing=Syncing {0} folder(s)
+#orig#check_status.syncing=Syncing {0} folders
 check_status.syncing=Synchronisiere {0} Folder
 #orig#check_status.title=Status of My Folders
 check_status.title=\u00dcbersicht meiner Folder
@@ -760,7 +760,7 @@ dialog.bind_error=Der Netzwerk Port ist bereits belegt
 dialog.bind_error.option.exit=Beenden
 #orig#dialog.bind_error.option.ignore=Continue
 dialog.bind_error.option.ignore=Weiter
-#orig#dialog.bind_error.option.text=Unable to bind on specified port(s)\!\nA port is required for {APPNAME} to\nreceive incoming connections.
+#orig#dialog.bind_error.option.text=Unable to bind on specified ports\!\nA port is required for {APPNAME} to\nreceive incoming connections.
 dialog.bind_error.option.text=Kann die ben\u00f6tigten Netzwerk Ports nicht belegen\!\nEin Port ist n\u00f6tig um eingehende\nVerbindungen zu erm\u00f6glichen.
 #orig#dialog.bind_error.option.title=Port binding error\!
 dialog.bind_error.option.title=Netzwerk Port Fehler\!
@@ -919,7 +919,7 @@ dialog.update_check.title=Update verf\u00fcgbar
 download.busy.description=Lade gerade Dateien dieses Folders herunter
 download.busy.title=Lade Datei herunter
 
-#orig#downloads_information_card.auto_cleanup.days={0} day(s)
+#orig#downloads_information_card.auto_cleanup.days={0} days
 downloads_information_card.auto_cleanup.days={0} Tag(e)
 downloads_information_card.auto_cleanup.frequency_tip=Auto-Aufräumen nach
 #orig#downloads_information_card.auto_cleanup.immediate=Immediate
@@ -1257,7 +1257,7 @@ folder_problem.table_model.description=Beschreibung
 folder_problem.table_model.not_available=Nicht verf\u00fcgbar
 #orig#folder_problem.table_model.solution=Solution
 folder_problem.table_model.solution=L\u00f6sung
-#orig#folder_problem.unsynchronized=Folder {0} has not been in sync for {1} day(s)
+#orig#folder_problem.unsynchronized=Folder {0} has not been in sync for {1} days
 folder_problem.unsynchronized=Folder {0} wurde seit {1} Tagen nicht mehr synchronisiert.
 folder_problem.unsynchronized.soln_desc=Folder synchronisieren
 folder_problem.unsynchronized_hours=Folder {0} wurde seit {1} Stunden nicht mehr synchronisiert.
@@ -1398,7 +1398,7 @@ general.folder_name=Name
 general.friday=Freitag
 general.help=Hilfe
 general.help.key=H
-#orig#general.hours=Hour(s)
+#orig#general.hours=Hours
 general.hours=Stunden
 #orig#general.inviter=Inviter
 general.inviter=Von
@@ -1413,7 +1413,7 @@ general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
 #orig#general.message=Message
 general.message=Nachricht
-#orig#general.minutes=Minute(s)
+#orig#general.minutes=Minutes
 general.minutes=Minuten
 #orig#general.monday=Monday
 general.monday=Montag
@@ -1448,7 +1448,7 @@ general.save=Speichern
 general.save.key=S
 #orig#general.search=Search
 general.search=Suchen
-#orig#general.seconds=Second(s)
+#orig#general.seconds=Seconds
 general.seconds=Sekunden
 #orig#general.select=Select
 general.select=Ausw\u00e4hlen
@@ -1810,7 +1810,7 @@ preferences.dialog.exit_behavior=Beim Schlie\u00dfen von {APPNAME}
 preferences.dialog.exit_behavior.exit=Programm beenden
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=in den Systembereich minimieren
-#orig#preferences.dialog.folder_sync_text=Warning day(s)
+#orig#preferences.dialog.folder_sync_text=Warning days
 preferences.dialog.folder_sync_text=Warnung nach Tag
 #orig#preferences.dialog.folder_sync_warn.use=Warn if folders are not in sync
 preferences.dialog.folder_sync_warn.use=Warnen wenn Folder nicht synchronisiert wurden
@@ -2065,7 +2065,7 @@ pro.server_admin.name=Server Admin Konsole
 pro.status_tab.disabled=Deaktiviert. Hier aktivieren.
 #orig#pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
 pro.status_tab.disabled.tips=Warum ist {APPNAME} derzeit deaktiviert?
-#orig#pro.status_tab.remaining={0} day(s) remaining
+#orig#pro.status_tab.remaining={0} days remaining
 pro.status_tab.remaining={0} Tag(e) \u00fcbrig
 #orig#pro.status_tab.remaining.tips=Your license will expire in {0} days
 pro.status_tab.remaining.tips=Ihre Lizenz wird in {0} auslaufen
@@ -2371,15 +2371,15 @@ status_bar.poor_quality_warning.title=Schlechte Verbindungsqualit\u00e4t
 #orig#status_bar.sleep.tips=Disable folder change scanning
 status_bar.sleep.tips=Suche nach \u00c4nderungen deaktivieren
 
-#orig#status_tab.computers=Computer(s)
+#orig#status_tab.computers=Computers
 status_tab.computers=Computer
-#orig#status_tab.files_available=File(s) available
-status_tab.files_available=Datei(en) verf\u00fcgbar
+#orig#status_tab.files_available=Files available
+status_tab.files_available=Dateien verf\u00fcgbar
 status_tab.files_downloads=Downloads
-status_tab.files_downloads_active=Download(s) ({0} KB/s)
+status_tab.files_downloads_active=Downloads ({0} KB/s)
 status_tab.files_uploads=Uploads
 status_tab.files_uploads_active=Uploads ({0} KB/s)
-#orig#status_tab.folders=Folder(s)
+#orig#status_tab.folders=Folders
 status_tab.folders=Folder
 #orig#status_tab.in_sync=All folders are in sync
 status_tab.in_sync=Alle Folder sind synchronisiert
@@ -2392,7 +2392,7 @@ status_tab.never_synced=Folder noch nie synchronisiert
 status_tab.new_friendship_notices=Freundschaftsanfragen
 status_tab.new_invitation_notices=Einladungen
 status_tab.new_invitations=Neue Einladungen
-##status_tab.new_single_file_offers=New single file offer(s)
+##status_tab.new_single_file_offers=New single file offers
 status_tab.new_warning_notices=Warnungen
 #orig#status_tab.no_computers=No other computers known
 status_tab.no_computers=Keine anderen Computer bekannt
@@ -2625,7 +2625,7 @@ uicontroller.sync_info.transfer=Werde {0} Dateien übertragen.
 ##uilock.dialog.title=User interface locked
 ##uilock.dialog.username=Username\:
 
-#orig#uploads_information_card.auto_cleanup.days={0} day(s)
+#orig#uploads_information_card.auto_cleanup.days={0} days
 uploads_information_card.auto_cleanup.days={0} Tag(e)
 uploads_information_card.auto_cleanup.frequency_tip=Auto-Aufräumen nach
 #orig#uploads_information_card.auto_cleanup.immediate=Immediate
@@ -2801,9 +2801,9 @@ wizard.control.next.description=Zum n\u00e4chsten Schritt
 ##wizard.create_folder.found_online.join=Sync existing folder
 ##wizard.create_folder.found_online.text=An existing folder has been found with this name ({0}).\n\nDo you want to synchronize with existing folder? (Recommended)
 ##wizard.create_folder.found_online.title=Folder already found
-#orig#wizard.create_folder.title=Creating Folder(s)
+#orig#wizard.create_folder.title=Creating Folders
 wizard.create_folder.title=Erstelle Folder
-#orig#wizard.create_folder.working=Creating folder(s), please wait.
+#orig#wizard.create_folder.working=Creating folders, please wait.
 wizard.create_folder.working=Erstelle Folder, bitte warten.
 #orig#wizard.error_title=Wizard error
 wizard.error_title=Assistent Fehler
@@ -2888,7 +2888,7 @@ wizard.multi_folder_setup.title=Folder konfigurieren
 wizard.multi_online_storage_setup.local_folder_location=Lokales Verzeichnis
 #orig#wizard.multi_online_storage_setup.select_directory=Select directory
 wizard.multi_online_storage_setup.select_directory=Verzeichnis ausw\u00e4hlen
-#orig#wizard.multi_online_storage_setup.title=Configure folder(s)
+#orig#wizard.multi_online_storage_setup.title=Configure folders
 wizard.multi_online_storage_setup.title=Folder einrichten
 #orig#wizard.pfwizard.folder_title=Folder Wizard
 wizard.pfwizard.folder_title=Assistent
@@ -2934,7 +2934,7 @@ wizard.success_configure=Folder erfolgreich aufgesetzt\!
 wizard.success_join=Der Folder wurde auf diesem Computer eingerichtet\!
 #orig#wizard.tell_friend.add_email_address=Please enter the email addresses (one per line)
 wizard.tell_friend.add_email_address=Bitte Emails eingeben (eine pro Zeile)
-#orig#wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
+#orig#wizard.tell_friend.personal_message=Please enter a message for the receivers (optional)
 wizard.tell_friend.personal_message=Nachricht f\u00fcr den Empf\u00e4nger eingeben (optional)
 wizard.tell_friend.sending=Sende
 #orig#wizard.tell_friend.success=Emails have been sent to the recipients.
