--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1299,7 +1299,7 @@ folders_list.local_folders=Auf diesem Computer
 folders_list.online_folders=Verf\u00fcgbare Folder
 folders_list.typical_folders=Empfohlene Folder
 
-folders_tab.auto_accept.text=Automatisches setup
+folders_tab.auto_accept.text=Auto-Setup
 folders_tab.auto_accept.tip=Synchronisiert neue Folder automatisch mit diesem Computer.
 folders_tab.connecting=Verbinde...
 folders_tab.folder_wizard=(Assistent)
@@ -2612,7 +2612,7 @@ uicontroller.remote_mass_delete.warning_message=Mitglied {0} hat {1}% der Dateie
 uicontroller.sync_info.changed={0} geändert
 uicontroller.sync_info.deleted={0} gelöscht
 uicontroller.sync_info.new={0} neu
-uicontroller.sync_info.no_changes_detected=No changes detected
+uicontroller.sync_info.no_changes_detected=Kein Änderungen gefunden
 uicontroller.sync_info.start=Synchronisation wurde gestartet
 uicontroller.sync_info.title=Sync gestartet
 uicontroller.sync_info.transfer=Werde {0} Dateien übertragen.
