--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1429,6 +1429,7 @@ general.ok=OK
 general.ok.key=\u00dc
 general.online_archive_mode=Datei Archiv (online)
 #orig#general.password=Password
+general.username=Benutzername
 general.password=Passwort
 #orig#general.preview_folder=Preview folder
 general.preview_folder=Vorschau
