Added info about archive

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1264,7 +1264,7 @@ folder_remove.dialog.button.key=E
 #orig#folder_remove.dialog.button.name=Remove
 folder_remove.dialog.button.name=Entfernen
 #orig#folder_remove.dialog.delete=Delete meta-data
-folder_remove.dialog.delete=Metadaten l\u00f6schen
+folder_remove.dialog.delete=Archiv und Metadaten l\u00f6schen
 #orig#folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_local=Nicht mehr lokal synchronisieren
 #orig#folder_remove.dialog.remove_from_os=Remove online
