--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2783,7 +2783,7 @@ wizard.control.cancel.description=Diesen Assistenten abbrechen
 #orig#wizard.control.finish=Exit
 wizard.control.finish=Fertig
 #orig#wizard.control.finish.description=Exit this wizard task
-wizard.control.finish.description=Diesen Assistenten abschlie\u00dfen
+wizard.control.finish.description=Diesen Assistenten schlieﬂen
 #orig#wizard.control.help=Help
 wizard.control.help=Hilfe
 #orig#wizard.control.help.description=Show online help (Alt-8)
