Fix title of remove folder dialog, fixes #2535

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -914,8 +914,8 @@ folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_os=Remove online
 folder_remove.dialog.sync_warning=The Folder is currently syncing\!
-folder_remove.dialog.text=Remove Folder {0}?
-folder_remove.dialog.title=Remove Folder {0}?
+folder_remove.dialog.text=Remove folder {0}?
+folder_remove.dialog.title=Remove Folder
 
 folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
 folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA: {1}
@@ -1369,7 +1369,7 @@ preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 
 preview_folder_remove.dialog.text=Remove folder {0}?
-preview_folder_remove.dialog.title=Remove Folder {0}?
+preview_folder_remove.dialog.title=Remove Folder
 
 remove_pattern.dont=Do Not Remove
 remove_pattern.prompt=Pattern '{0}' will be removed.
