--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1341,10 +1341,8 @@ folder_remove.dialog.remove_from_local=Ferma la sincronizzazione locale
 folder_remove.dialog.remove_from_os=Rimuovi online
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning={APPNAME} sta effettuando la sincronizzazione\!
-#orig#folder_remove.dialog.text=Remove Folder {0}?
+#orig#folder_remove.dialog.text=Remove folder {0}?
 folder_remove.dialog.text=Rimuovere {APPNAME} {0}?
-#orig#folder_remove.dialog.title=Remove Folder {0}?
-folder_remove.dialog.title=Rimuovere {APPNAME} {0}?
 
 #orig#folder_repository.continue_exit=Exit anyways
 folder_repository.continue_exit=Esci comunque
@@ -2078,8 +2076,6 @@ preferences.dialog.zip_compression=compressione ZIP
 
 #orig#preview_folder_remove.dialog.text=Remove folder {0}?
 preview_folder_remove.dialog.text=Rimuovere {APPNAME} {0}?
-#orig#preview_folder_remove.dialog.title=Remove Folder {0}?
-preview_folder_remove.dialog.title=Rimuovere {APPNAME} {0}?
 
 #orig#pro.action_open_license_file.description=Opens a license key file from disk
 pro.action_open_license_file.description=Apre un file di licenza da disco
