--- a/src/etc/ReleaseNotes.txt
+++ b/src/etc/ReleaseNotes.txt
@@ -1,4 +1,55 @@
-PowerFolder Version 5.0 - http://www.powerfolder.com
+PowerFolder Version 5.5 - http://www.powerfolder.com
+
+= Improvements/New features =
+ * New skin: Storm
+ * PowerFolders base path will fall back to default if not available, e.g. network drive.
+ * File browser shows better feedback messages if no files matches the search input.
+ * Chat popups now show the message and have a reply button.
+ * Improved and corrected LAN/VPN/Internet connection in complex network scenarios.
+ * Program update dialog now clearly indicates that the update is for PowerFolder.
+ * Activation by file not longer supported. Please always use online activation.
+ * Directory chooser now shows drive names.
+ * Folderlist: Not longer shows icons on mouse hover. 
+ 
+= Bugfixes =
+ * Security: Fixed bug, which causes the client to sync if not yet logged in.
+ * Corrected handling of non-default paths of recommended folders.
+ * Information section now correctly opens in multi screen environment.
+ * It's now possible to change the physical directory if it's not accessible.
+ * Mac: Minimize to system tray also hides the icon in the program bar.
+ * Up- and downloads now break when files get excluded from sync.
+ * Corrected several wizard texts.
+ * Fixed UDT connection bug.
+
+
+Please give us feedback and request improvements:
+http://www.powerfolder.com/contact.html
+
+Minimum Java version is 6.0.
+
+Thanks to those who requested features. We hope to implement
+even more if you keep requesting them for the next version.
+
+- The PowerFolder Team
+
+Official Roadmap:
+http://www.powerfolder.com/roadmap.html
+
+Please remember: You agree to keep us free of any (legal) issues involved with
+downloading and using this PowerFolder!
+
+Contact information:
+Homepage   : http://www.powerfolder.com
+Contact    : http://www.powerfolder.com/contact.html
+Support    : http://www.powerfolder.com/support.html
+Development: http://www.powerfolder.com/about_us.html
+Email      : contact (at) powerfolder.com
+
+
+== Version History ==
+
+Version 5.0.0
+-------------
 
 = New features =
  * Greatly simplified first setup. In a nutshell:
@@ -65,32 +116,6 @@ PowerFolder Version 5.0 - http://www.powerfolder.com
    http://www.powerfolder.com/wiki/Extended_Security_Control
  * Many more minor bugfixes.
 
-
-Please give us feedback and request improvements:
-http://www.powerfolder.com/contact.html
-
-Minimum Java version is 6.0.
-
-Thanks to those who requested features. We hope to implement
-even more if you keep requesting them for the next version.
-
-- The PowerFolder Team
-
-Official Roadmap:
-http://www.powerfolder.com/roadmap.html
-
-Please remember: You agree to keep us free of any (legal) issues involved with
-downloading and using this PowerFolder!
-
-Contact information:
-Homepage   : http://www.powerfolder.com
-Contact    : http://www.powerfolder.com/contact.html
-Support    : http://www.powerfolder.com/support.html
-Development: http://www.powerfolder.com/about_us.html
-Email      : contact (at) powerfolder.com
-
-
-== Version History ==
 
 Version 4.5.0
 -------------
