Move WARN_ON_CLOSE into UI, refs #2595

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -914,10 +914,10 @@ folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.text=Remove folder {0}?
 folder_remove.dialog.title=Remove Folder
 
-folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA: {1}
-folder_repository.warn_on_close.title=Syncing
-folder_repository.continue_exit=Exit anyways
+uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA: {1}
+uicontroller.warn_on_close.title=Syncing
+uicontroller.continue_exit=Exit anyways
 
 free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_recommendation2={APPNAME} is currently disabled until you take action.
