--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1289,14 +1289,14 @@ folder_remove.dialog.sync_warning=El folder esta siendo sincronizado\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.text=Remover folder {0}?
 
-#orig#folder_repository.continue_exit=Exit anyways
-folder_repository.continue_exit=Salir de todas maneras
-#orig#folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-folder_repository.warn_on_close.text=Estas carpetas todav\u00eda no han sido sincronizadas\:\n\n\n\n{0}
-#orig#folder_repository.warn_on_close.title=Syncing
-folder_repository.warn_on_close.title=Sincronizando
-#orig#folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
-folder_repository.warn_on_close_eta.text=Estas carpetas todav\u00eda no han sido sincronizadas\:\n\n\n\n{0}\n\nCompletando en\: {1}
+#orig#uicontroller.continue_exit=Exit anyways
+uicontroller.continue_exit=Salir de todas maneras
+#orig#uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+uicontroller.warn_on_close.text=Estas carpetas todav\u00eda no han sido sincronizadas\:\n\n\n\n{0}
+#orig#uicontroller.warn_on_close.title=Syncing
+uicontroller.warn_on_close.title=Sincronizando
+#orig#uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+uicontroller.warn_on_close_eta.text=Estas carpetas todav\u00eda no han sido sincronizadas\:\n\n\n\n{0}\n\nCompletando en\: {1}
 
 #orig#folders_list.collapse_hint=Collapse group
 folders_list.collapse_hint=Colapsar grupos
