--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1339,14 +1339,14 @@ folder_remove.dialog.sync_warning={APPNAME} sta effettuando la sincronizzazione\
 #orig#folder_remove.dialog.text=Remove folder {0}?
 folder_remove.dialog.text=Rimuovere {APPNAME} {0}?
 
-#orig#folder_repository.continue_exit=Exit anyways
-folder_repository.continue_exit=Esci comunque
-#orig#folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-folder_repository.warn_on_close.text=Queste cartelle non sono ancora sincronizzate\:\n\n\n\n{0}
-#orig#folder_repository.warn_on_close.title=Syncing
-folder_repository.warn_on_close.title=Sincronizzazione in corso
-#orig#folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
-folder_repository.warn_on_close_eta.text=Queste cartelle non sono ancora sincronizzate\:\n\n\n\n{0}\n\nETA\: {1}
+#orig#uicontroller.continue_exit=Exit anyways
+uicontroller.continue_exit=Esci comunque
+#orig#uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+uicontroller.warn_on_close.text=Queste cartelle non sono ancora sincronizzate\:\n\n\n\n{0}
+#orig#uicontroller.warn_on_close.title=Syncing
+uicontroller.warn_on_close.title=Sincronizzazione in corso
+#orig#uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+uicontroller.warn_on_close_eta.text=Queste cartelle non sono ancora sincronizzate\:\n\n\n\n{0}\n\nETA\: {1}
 
 #orig#folders_list.collapse_hint=Collapse group
 folders_list.collapse_hint=Collassa gruppo
