--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -842,10 +842,10 @@ folder_panel.settings_tab.removebutton.name=Remover
 ##folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 ##folder_remove.dialog.text=Remove Folder {0}?
 
-##folder_repository.continue_exit=Exit anyways
-##folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-##folder_repository.warn_on_close.title=Syncing
-##folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+##uicontroller.continue_exit=Exit anyways
+##uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+##uicontroller.warn_on_close.title=Syncing
+##uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
 
 ##folders_list.collapse_hint=Collapse group
 ##folders_list.expand_hint=Expand group
