--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1339,14 +1339,14 @@ folder_remove.dialog.sync_warning={APPNAME}\u6b63\u5728\u540c\u6b65\uff01
 #orig#folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.text=\u79fb\u9664{APPNAME} {0}?
 
-#orig#folder_repository.continue_exit=Exit anyways
-folder_repository.continue_exit=\u65e0\u8bba\u5982\u4f55\u9000\u51fa
-#orig#folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-folder_repository.warn_on_close.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u4ecd\u6ca1\u6709\u540c\u6b65\:\n\n\n\n{0}
-#orig#folder_repository.warn_on_close.title=Syncing
-folder_repository.warn_on_close.title=\u6b63\u5728\u540c\u6b65
-#orig#folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
-folder_repository.warn_on_close_eta.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u4ecd\u6ca1\u6709\u540c\u6b65\:\n\n\n\n{0}\n\nETA\: {1}
+#orig#uicontroller.continue_exit=Exit anyways
+uicontroller.continue_exit=\u65e0\u8bba\u5982\u4f55\u9000\u51fa
+#orig#uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+uicontroller.warn_on_close.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u4ecd\u6ca1\u6709\u540c\u6b65\:\n\n\n\n{0}
+#orig#uicontroller.warn_on_close.title=Syncing
+uicontroller.warn_on_close.title=\u6b63\u5728\u540c\u6b65
+#orig#uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+uicontroller.warn_on_close_eta.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u4ecd\u6ca1\u6709\u540c\u6b65\:\n\n\n\n{0}\n\nETA\: {1}
 
 #orig#folders_list.collapse_hint=Collapse group
 folders_list.collapse_hint=\u9690\u85cf\u7fa4\u7ec4
