--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1267,14 +1267,14 @@ folder_remove.dialog.sync_warning=Dieser Folder wird gerade synchronisiert\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.text=Folder {0} entfernen?
 
-#orig#folder_repository.continue_exit=Exit anyways
-folder_repository.continue_exit=Trotzdem beenden
-#orig#folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-folder_repository.warn_on_close.text=Diese Folder wurden noch nicht fertig synchronisiert\:\n\n\n\n{0}
-#orig#folder_repository.warn_on_close.title=Syncing
-folder_repository.warn_on_close.title=Synchronisiere
-#orig#folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
-folder_repository.warn_on_close_eta.text=Diese Folder wurden noch nicht fertig synchronisiert\:\n\n\n\n{0}\n\nETA\: {1}
+#orig#uicontroller.continue_exit=Exit anyways
+uicontroller.continue_exit=Trotzdem beenden
+#orig#uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+uicontroller.warn_on_close.text=Diese Folder wurden noch nicht fertig synchronisiert\:\n\n\n\n{0}
+#orig#uicontroller.warn_on_close.title=Syncing
+uicontroller.warn_on_close.title=Synchronisiere
+#orig#uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+uicontroller.warn_on_close_eta.text=Diese Folder wurden noch nicht fertig synchronisiert\:\n\n\n\n{0}\n\nETA\: {1}
 
 #orig#folders_list.collapse_hint=Collapse group
 folders_list.collapse_hint=Gruppe zuklappen
