--- a/src/etc/Translation_hu.properties
+++ b/src/etc/Translation_hu.properties
@@ -1291,14 +1291,14 @@ folder_remove.dialog.sync_warning=A mappa szinkroniz\u00e1l\u00e1sa jelenleg fol
 #orig#folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.text={0} mappa elt\u00e1vol\u00edt\u00e1sa?
 
-#orig#folder_repository.continue_exit=Exit anyways
-folder_repository.continue_exit=Kil\u00e9p\u00e9s mindenk\u00e9pp
-#orig#folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-folder_repository.warn_on_close.text=A k\u00f6vetkez\u0151 mapp\u00e1k m\u00e9g nincsenek szinkroniz\u00e1lva\:\n\n\n\n{0}
-#orig#folder_repository.warn_on_close.title=Syncing
-folder_repository.warn_on_close.title=Szinkroniz\u00e1l\u00e1s
-#orig#folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
-folder_repository.warn_on_close_eta.text=A k\u00f6vetkez\u0151 mapp\u00e1k m\u00e9g nincsenek szinkroniz\u00e1lva\:\n\n\n\n{0}\n\nETA\: {1}
+#orig#uicontroller.continue_exit=Exit anyways
+uicontroller.continue_exit=Kil\u00e9p\u00e9s mindenk\u00e9pp
+#orig#uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+uicontroller.warn_on_close.text=A k\u00f6vetkez\u0151 mapp\u00e1k m\u00e9g nincsenek szinkroniz\u00e1lva\:\n\n\n\n{0}
+#orig#uicontroller.warn_on_close.title=Syncing
+uicontroller.warn_on_close.title=Szinkroniz\u00e1l\u00e1s
+#orig#uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+uicontroller.warn_on_close_eta.text=A k\u00f6vetkez\u0151 mapp\u00e1k m\u00e9g nincsenek szinkroniz\u00e1lva\:\n\n\n\n{0}\n\nETA\: {1}
 
 #orig#folders_list.collapse_hint=Collapse group
 folders_list.collapse_hint=Csoport megjelen\u00edt\u00e9se
