--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -878,10 +878,10 @@ folder_remove.dialog.sync_warning=\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u30
 #orig#folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.text=\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0 {0} \u3092\u524a\u9664\uff1f
 
-##folder_repository.continue_exit=Exit anyways
-##folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-##folder_repository.warn_on_close.title=Syncing
-##folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+##uicontroller.continue_exit=Exit anyways
+##uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+##uicontroller.warn_on_close.title=Syncing
+##uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
 
 ##folders_list.collapse_hint=Collapse group
 ##folders_list.expand_hint=Expand group
