--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -880,10 +880,10 @@ folder_remove.dialog.sync_warning=PowerFolder \u0441\u0435\u0439\u0447\u0430\u04
 #orig#folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.text=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043f\u0430\u043f\u043a\u0443 PowerFolder {0}?
 
-##folder_repository.continue_exit=Exit anyways
-##folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-##folder_repository.warn_on_close.title=Syncing
-##folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
+##uicontroller.continue_exit=Exit anyways
+##uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+##uicontroller.warn_on_close.title=Syncing
+##uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA\: {1}
 
 ##folders_list.collapse_hint=Collapse group
 ##folders_list.expand_hint=Expand group
