--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -494,11 +494,11 @@ action_resolve_problem.key=L
 action_resolve_problem.name=L\u00f6sen
 
 #orig#action_restore_archive.description=Restore archived file version
-action_restore_archive.description=Stellt eine archivierte Version der Datei wieder her
+action_restore_archive.description=Zugriff aus das Dateiarchiv
 #orig#action_restore_archive.key=R
-action_restore_archive.key=W
+action_restore_archive.key=A
 #orig#action_restore_archive.name=Restore
-action_restore_archive.name=Wiederherstellen
+action_restore_archive.name=Dateiarchiv
 
 #orig#action_search_computer.description=Search for a computer
 action_search_computer.description=Nach Computer suchen
