--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1307,7 +1307,7 @@ folder_information_card.files.title=Dateien
 #orig#folder_information_card.members.tips=Shows folder member details
 folder_information_card.members.tips=Zeigt Mitglieder Details
 #orig#folder_information_card.members.title=Members
-folder_information_card.members.title=Mitglieder
+folder_information_card.members.title=Computer
 #orig#folder_information_card.problems.tips=Shows problems for this folder
 folder_information_card.problems.tips=Zeigt Probleme dieses Folders
 #orig#folder_information_card.problems.title=Problems
