--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2034,10 +2034,10 @@ preferences.dialog.show_chat_notifications=Popup f\u00fcr neue Chat Nachrichten 
 preferences.dialog.show_pf_link=Shortcut zu {APPNAME} Daten
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=Popups f\u00fcr Systemmeldungen anzeigen
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Geschwindigkeit im Ruhemodus
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Verringerung der Leitungsgeschwindigkeit im Ruhemodus
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Geschwindigkeit im Ruhemodus
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Verringerung der Leitungsgeschwindigkeit im Ruhemodus
 #orig#preferences.dialog.skin_text=Skin
 preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_macosx.description=
