--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1390,10 +1390,10 @@ preferences.dialog.show_chat_notifications=Afficher les notifications de message
 preferences.dialog.show_pf_link=Raccourci vers les donn\u00e9es {APPNAME}
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=Afficher les notifications syst\u00e8mes en mode r\u00e9duit
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Contr\u00f4le de la bande passante
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00e9rente de 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Contr\u00f4le de la bande passante
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00e9rente de 0)
 preferences.dialog.skin_text=Th\u00e8me
 #orig#preferences.dialog.start_with_windows=Start {APPNAME} with Windows
 preferences.dialog.start_with_windows=D\u00e9marrer PowerFolder \u00e0 l'ouverture de Windows
