--- a/src/etc/Translation_hu.properties
+++ b/src/etc/Translation_hu.properties
@@ -1916,10 +1916,10 @@ preferences.dialog.show_chat_notifications=Cseveg\u00e9si \u00e9rtes\u00edt\u00e
 preferences.dialog.show_pf_link={APPNAME} mapp\u00e1k megjelen\u00edt\u00e9se a Linkek k\u00f6z\u00f6tt
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=Rendszer\u00fczenetek megjelen\u00edt\u00e9se minimaliz\u00e1lt \u00e1llapotban
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Sz\u00fcnet alatti sz\u00e1vsz\u00e9less\u00e9gi hat\u00e1r
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Sz\u00fcnet m\u00f3d sz\u00e1vsz\u00e9less\u00e9gi hat\u00e1ra (csak akkor m\u0171k\u00f6dik ha a limit nem 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Sz\u00fcnet alatti sz\u00e1vsz\u00e9less\u00e9gi hat\u00e1r
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Sz\u00fcnet m\u00f3d sz\u00e1vsz\u00e9less\u00e9gi hat\u00e1ra (csak akkor m\u0171k\u00f6dik ha a limit nem 0)
 #orig#preferences.dialog.skin_text=Skin
 preferences.dialog.skin_text=St\u00edlus
 ##preferences.dialog.start_with_macosx.description=
