--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1458,10 +1458,10 @@ preferences.dialog.show_chat_notifications=\u6700\u5c0f\u5316\u6642\u306b\u30c1\
 ##preferences.dialog.show_pf_link=Shortcut to {APPNAME} data
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=\u6700\u5c0f\u5316\u6642\u306b\u30b7\u30b9\u30c6\u30e0\u901a\u77e5\u3092\u8868\u793a
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=\u30b5\u30a4\u30ec\u30f3\u30c8\u6642\u306e\u5e2f\u57df\u5e45\u306e\u5272\u308a\u5f53\u3066
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=\u30b5\u30a4\u30ec\u30f3\u30c8\u30e2\u30fc\u30c9\u6642\u306b\u4f7f\u7528\u3059\u308b\u5e2f\u57df\u5e45\u3092\u8a2d\u5b9a\u3057\u307e\u3059\uff080 \u4ee5\u5916\u306e\u8a2d\u5b9a\u6642\u306e\u307f\u6709\u52b9\uff09
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=\u30b5\u30a4\u30ec\u30f3\u30c8\u6642\u306e\u5e2f\u57df\u5e45\u306e\u5272\u308a\u5f53\u3066
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=\u30b5\u30a4\u30ec\u30f3\u30c8\u30e2\u30fc\u30c9\u6642\u306b\u4f7f\u7528\u3059\u308b\u5e2f\u57df\u5e45\u3092\u8a2d\u5b9a\u3057\u307e\u3059\uff080 \u4ee5\u5916\u306e\u8a2d\u5b9a\u6642\u306e\u307f\u6709\u52b9\uff09
 ##preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_macosx.description=
 ##preferences.dialog.start_with_macosx.key=S
