--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1392,10 +1392,10 @@ preferences.dialog.restart.title=Konieczy jest restart
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_pf_link=Shortcut to {APPNAME} data
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Ograniczenie Trybu Cichego
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Ustaw przepustowo\u015b\u0107 po\u0142\u0105czenia z sieci\u0105, podczas gdy PowerFolder jest w Trybie Cichym (dzia\u0142a tylko w przypadku limit\u00f3w wi\u0119kszych od 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Ograniczenie Trybu Cichego
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Ustaw przepustowo\u015b\u0107 po\u0142\u0105czenia z sieci\u0105, podczas gdy PowerFolder jest w Trybie Cichym (dzia\u0142a tylko w przypadku limit\u00f3w wi\u0119kszych od 0)
 ##preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_macosx.description=
 ##preferences.dialog.start_with_macosx.key=S
