--- a/src/etc/Translation_tr.properties
+++ b/src/etc/Translation_tr.properties
@@ -976,8 +976,8 @@
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_pf_link=Display {APPNAME} folders in Links
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-##preferences.dialog.silent_throttle=Pause bandwidth throttle
-##preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+##preferences.dialog.paused_throttle=Pause bandwidth throttle
+##preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
 ##preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_windows=Start {APPNAME} with Windows
 ##preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
