--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1983,10 +1983,10 @@ preferences.dialog.show_chat_notifications=\u6700\u5c0f\u5316\u65f6\u663e\u793a\
 preferences.dialog.show_pf_link=\u5728\u94fe\u63a5\u4e2d\u663e\u793a{APPNAME}\u76ee\u5f55
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=\u6700\u5c0f\u5316\u65f6\u663e\u793a\u7cfb\u7edf\u63d0\u793a
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
 #orig#preferences.dialog.skin_text=Skin
 preferences.dialog.skin_text=\u76ae\u80a4
 ##preferences.dialog.start_with_macosx.description=
