--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1370,10 +1370,10 @@ preferences.dialog.randomPort.tooltip=\u0633\u0648\u0641 \u064a\u062d\u0627\u064
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_pf_link=Shortcut to {APPNAME} data
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=\u0635\u0645\u0627\u0645 \u0646\u0637\u0627\u0642 \u0627\u0644\u062d\u0632\u0645\u0629 \u0641\u064a \u0627\u0644\u0648\u0636\u0639 \u0627\u0644\u0635\u0627\u0645\u062a
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=\u062d\u062f\u062f \u0627\u0633\u062a\u0639\u0645\u0627\u0644 \u0646\u0637\u0627\u0642 \u0627\u0644\u062d\u0632\u0645\u0629 \u0641\u064a \u0627\u0644\u0648\u0636\u0639 \u0627\u0644\u0635\u0627\u0645\u062a   (\u064a\u0639\u0645\u0644 \u0641\u0642\u0637 \u0644\u062d\u062f\u0648\u062f \u063a\u064a\u0631  0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=\u0635\u0645\u0627\u0645 \u0646\u0637\u0627\u0642 \u0627\u0644\u062d\u0632\u0645\u0629 \u0641\u064a \u0627\u0644\u0648\u0636\u0639 \u0627\u0644\u0635\u0627\u0645\u062a
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=\u062d\u062f\u062f \u0627\u0633\u062a\u0639\u0645\u0627\u0644 \u0646\u0637\u0627\u0642 \u0627\u0644\u062d\u0632\u0645\u0629 \u0641\u064a \u0627\u0644\u0648\u0636\u0639 \u0627\u0644\u0635\u0627\u0645\u062a   (\u064a\u0639\u0645\u0644 \u0641\u0642\u0637 \u0644\u062d\u062f\u0648\u062f \u063a\u064a\u0631  0)
 ##preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_macosx.description=
 ##preferences.dialog.start_with_macosx.key=S
