--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1299,8 +1299,8 @@ preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_auto_created_folders=Show notification of autocreated folders
-preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle=Pause bandwidth throttle
 preferences.dialog.online_storage.text=Use cloud space
 preferences.dialog.online_storage.tip=Setup {APPNAME} to use cloud space
 preferences.dialog.start_with_windows=Start {APPNAME} with Windows
