--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1918,10 +1918,10 @@ preferences.dialog.show_chat_notifications=Mostrar notificacion chat se encuentr
 preferences.dialog.show_pf_link=Mostrar directorio {APPNAME} en Enlaces
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=Mostrar notificaciones del sistema cuando minimizado
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Acelerador de banda de transferencia en modo silencioso
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Establece el acelerador de banda de transferencia en modo silencioso. (solo es efectivo en limites que no son 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Acelerador de banda de transferencia en modo silencioso
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Establece el acelerador de banda de transferencia en modo silencioso. (solo es efectivo en limites que no son 0)
 #orig#preferences.dialog.skin_text=Skin
 preferences.dialog.skin_text=Piel
 ##preferences.dialog.start_with_macosx.description=
