--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2107,10 +2107,10 @@ preferences.dialog.show_chat_notifications=Mostra le notifiche del dialogo quand
 preferences.dialog.show_pf_link=Mostra collegamento ai dati {APPNAME}
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=Mostra le notifiche di sistema quando minimizzato
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Limitazione di banda silenziosa
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Imposta limitazione di banda mediante pause (funziona solo per limiti diversi da 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Limitazione di banda silenziosa
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Imposta limitazione di banda mediante pause (funziona solo per limiti diversi da 0)
 #orig#preferences.dialog.skin_text=Skin
 preferences.dialog.skin_text=Tema
 ##preferences.dialog.start_with_macosx.description=
