--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1356,10 +1356,10 @@ preferences.dialog.randomPort.tooltip=PowerFolder zoekt automatisch een willekeu
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_pf_link=Shortcut to {APPNAME} data
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Passive mode bandbreedte beperking
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Zet het bandbreedte gebruik percentage in passive mode (werkt alleen voor een limiet anders dan 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Passive mode bandbreedte beperking
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Zet het bandbreedte gebruik percentage in passive mode (werkt alleen voor een limiet anders dan 0)
 ##preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_macosx.description=
 ##preferences.dialog.start_with_macosx.key=S
