--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1410,10 +1410,10 @@ preferences.dialog.restart.title=Reinicio requerido
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_pf_link=Shortcut to {APPNAME} data
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Regulador de largura de banda em modo silencioso
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=Colocar o regulador de largura de banda em modo silencioso (funciona apenas para limites diferentes de 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Regulador de largura de banda em modo silencioso
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=Colocar o regulador de largura de banda em modo silencioso (funciona apenas para limites diferentes de 0)
 ##preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_macosx.description=
 ##preferences.dialog.start_with_macosx.key=S
