--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1346,10 +1346,10 @@ preferences.dialog.randomPort.tooltip=PowerFolder kommer f\u00f6rs\u00f6ka koppl
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_pf_link=Shortcut to {APPNAME} data
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-#orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.silent_throttle=Bandbredd i passiv mod
-#orig#preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle.tooltip=St\u00e4ll in bandbreddanv\u00e4ndning f\u00f6r passiv mod (Fungerar endast f\u00f6r v\u00e4rden st\u00f6rre \u00e4n 0)
+#orig#preferences.dialog.paused_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle=Bandbredd i passiv mod
+#orig#preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle.tooltip=St\u00e4ll in bandbreddanv\u00e4ndning f\u00f6r passiv mod (Fungerar endast f\u00f6r v\u00e4rden st\u00f6rre \u00e4n 0)
 ##preferences.dialog.skin_text=Skin
 ##preferences.dialog.start_with_macosx.description=
 ##preferences.dialog.start_with_macosx.key=S
